--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -25,6 +25,6 @@ js: dashboard
   <div class="notification warning">
     <h3>Complete Your Profile</h3>
     <p>To start receiving personalized letters, please complete your profile setup.</p>
-    <a href="/onboarding/address.html" class="btn btn-primary">Complete Profile</a>
+    <a href="/onboarding/address" class="btn btn-primary">Complete Profile</a>
   </div>
 </div>
