changed onboarding and added legal updates also changed main homepage

--- a/onboarding/address.html
+++ b/onboarding/address.html
@@ -1,11 +1,14 @@
 ---
 layout: default
+step: address
 ---
 
 <!--/onboarding/address.html-->
 
 <body data-onboarding-step="address">
-  <div id="onboarding-header"></div>
+  <div id="onboarding-header">
+
+  </div>
 
   <main class="onboarding-content">
     <div class="onboarding-step-header">
