--- a/onboarding/experience.html
+++ b/onboarding/experience.html
@@ -1,10 +1,14 @@
 ---
 layout: default
 title: Choose Your Experience
+step: experience
 ---
 
+
 <body data-onboarding-step="experience">
-  <div id="onboarding-header"></div>
+  <div id="onboarding-header">
+
+  </div>
 
   <main class="onboarding-content onboarding-content--wide">
     <div class="onboarding-step-header">
@@ -61,7 +65,7 @@ title: Choose Your Experience
         </svg>
         <div>
           <strong>Secure payment powered by Stripe</strong>
-          <p>Cancel anytime. No long-term commitments. Your first letter ships within 3-5 business days.</p>
+          <p>Cancel anytime. No long-term commitments. Your first letter ships within 5-7 business days.</p>
         </div>
       </div>
 
