--- a/onboarding/interests.html
+++ b/onboarding/interests.html
@@ -1,11 +1,15 @@
 ---
 layout: default
+step: interests
 ---
 
 <!--/onboarding/interests.html-->
 
+
 <body data-onboarding-step="interests">
-  <div id="onboarding-header"></div>
+  <div id="onboarding-header">
+
+  </div>
 
   <main class="onboarding-content">
     <h1>What sparks your curiosity?</h1>
