--- a/pages/cookies.html
+++ b/pages/cookies.html
@@ -10,30 +10,136 @@ permalink: /cookies/
     <div class="content-item">
       <h1 class="content-item-heading">Cookie Policy</h1>
       <p class="content-item-paragraph">
-        LumoLetters uses cookies and similar technologies to enhance your experience, analyze site usage, and improve our services. By using our website, you consent to the use of cookies.
+        This Cookie Policy explains how LumoLetters ("we," "us," or "our") uses cookies and similar tracking technologies when you visit our website. It explains what these technologies are, why we use them, and your rights to control them.
+      </p>
+      <p class="content-item-paragraph">
+        <strong>Last Updated:</strong> January 1, 2025
       </p>
     </div>
 
     <div class="content-item">
-      <h2 class="content-item-heading">1. Types of Cookies Used</h2>
+      <h2 class="content-item-heading">1. What Are Cookies?</h2>
       <p class="content-item-paragraph">
-        <strong>Essential Cookies:</strong> Necessary for site functionality and account access.<br>
-        <strong>Performance Cookies:</strong> Help us understand how users interact with the website.<br>
-        <strong>Marketing Cookies:</strong> May be used to deliver relevant advertising or promotions.
+        Cookies are small data files placed on your computer or mobile device when you visit a website. They are widely used to make websites work efficiently and provide information to website owners.
+      </p>
+      <p class="content-item-paragraph">
+        We also use similar technologies such as local storage and session storage (collectively referred to as "cookies" in this policy).
       </p>
     </div>
 
     <div class="content-item">
-      <h2 class="content-item-heading">2. Managing Cookies</h2>
+      <h2 class="content-item-heading">2. How We Use Cookies</h2>
       <p class="content-item-paragraph">
-        You can disable cookies through your browser settings. Note that disabling certain cookies may affect site functionality or personalization features.
+        We use only essential cookies that are necessary for our website to function properly. These cookies enable core functionality such as:
+      </p>
+      <p class="content-item-value">Maintaining your login session when you access your account</p>
+      <p class="content-item-value">Remembering your authentication status</p>
+      <p class="content-item-value">Protecting against security threats and fraudulent activity</p>
+      <p class="content-item-value">Enabling basic site navigation and access to secure areas</p>
+
+      <p class="content-item-paragraph">
+        <strong>We do not use cookies for:</strong>
+      </p>
+      <p class="content-item-value">Tracking your browsing activity across other websites</p>
+      <p class="content-item-value">Analytics or performance monitoring</p>
+      <p class="content-item-value">Marketing or advertising purposes</p>
+      <p class="content-item-value">Building user profiles or behavioral targeting</p>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">3. Cookies We Use</h2>
+      <p class="content-item-paragraph">
+        The table below lists the essential cookies used on our website:
+      </p>
+      <div style="overflow-x:auto;">
+        <table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+          <thead>
+            <tr style="background-color: #f5f5f5;">
+              <th style="padding: 12px; text-align: left; border: 1px solid #ddd;">Cookie Name</th>
+              <th style="padding: 12px; text-align: left; border: 1px solid #ddd;">Purpose</th>
+              <th style="padding: 12px; text-align: left; border: 1px solid #ddd;">Provider</th>
+              <th style="padding: 12px; text-align: left; border: 1px solid #ddd;">Duration</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="padding: 12px; border: 1px solid #ddd;">auth0</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Manages user authentication and login sessions</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Auth0 (Third-party)</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Session</td>
+            </tr>
+            <tr>
+              <td style="padding: 12px; border: 1px solid #ddd;">auth0_compat</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Ensures compatibility across different browsers for authentication</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Auth0 (Third-party)</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Session</td>
+            </tr>
+            <tr>
+              <td style="padding: 12px; border: 1px solid #ddd;">_auth0_session</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Stores encrypted user session information</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Auth0 (Third-party)</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">7 days</td>
+            </tr>
+            <tr>
+              <td style="padding: 12px; border: 1px solid #ddd;">session_id</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Maintains your browsing session on our website</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">LumoLetters</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Session</td>
+            </tr>
+            <tr>
+              <td style="padding: 12px; border: 1px solid #ddd;">csrf_token</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Protects against cross-site request forgery attacks</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">LumoLetters</td>
+              <td style="padding: 12px; border: 1px solid #ddd;">Session</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <p class="content-item-paragraph" style="font-size: 0.9em; color: #666;">
+        <strong>Note:</strong> "Session" cookies are temporary and are deleted when you close your browser.
       </p>
     </div>
 
     <div class="content-item">
-      <h2 class="content-item-heading">3. Contact Information</h2>
+      <h2 class="content-item-heading">4. Third-Party Cookies</h2>
       <p class="content-item-paragraph">
-        For questions about our cookie practices, please contact <a href="mailto:info@LumoLetters.com">info@LumoLetters.com</a>.
+        Some of the cookies listed above are set by Auth0, our authentication provider. These cookies are essential for secure login functionality. Auth0's use of cookies is governed by their own privacy policy, which you can review at <a href="https://auth0.com/privacy" target="_blank">https://auth0.com/privacy</a>.
+      </p>
+      <p class="content-item-paragraph">
+        We do not allow any other third-party cookies on our website.
+      </p>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">5. Managing Cookies</h2>
+      <p class="content-item-paragraph">
+        Because we only use essential cookies that are necessary for our website to function, we do not provide a cookie consent banner. These cookies cannot be disabled without preventing you from using key features of our service, such as logging into your account.
+      </p>
+      <p class="content-item-paragraph">
+        However, you can control and manage cookies through your browser settings. Please note that blocking or deleting essential cookies will prevent you from logging in and accessing your LumoLetters account. For information on how to manage cookies in your browser, visit:
+      </p>
+      <ul style="margin-left: 20px;">
+        <li style="margin: 8px 0;"><a href="https://support.google.com/chrome/answer/95647" target="_blank">Google Chrome</a></li>
+        <li style="margin: 8px 0;"><a href="https://support.mozilla.org/en-US/kb/enable-and-disable-cookies-website-preferences" target="_blank">Mozilla Firefox</a></li>
+        <li style="margin: 8px 0;"><a href="https://support.apple.com/guide/safari/manage-cookies-and-website-data-sfri11471/mac" target="_blank">Safari</a></li>
+        <li style="margin: 8px 0;"><a href="https://support.microsoft.com/en-us/microsoft-edge/delete-cookies-in-microsoft-edge-63947406-40ac-c3b8-57b9-2a946a29ae09" target="_blank">Microsoft Edge</a></li>
+      </ul>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">6. Changes to This Policy</h2>
+      <p class="content-item-paragraph">
+        We may update this Cookie Policy from time to time to reflect changes in our practices or for legal or regulatory reasons. When we make changes, we will update the "Last Updated" date at the top of this page.
+      </p>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">7. Contact Us</h2>
+      <p class="content-item-paragraph">
+        If you have any questions about our use of cookies, please contact us at:
+      </p>
+      <p class="content-item-value">
+        <strong>Email:</strong> <a href="mailto:info@lumoletters.com">info@lumoletters.com</a>
       </p>
     </div>
 
