--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -8,78 +8,173 @@ permalink: /privacy/
   <div class="page-content">
     <div class="content-item">
       <h1 class="content-item-heading">Privacy Policy</h1>
-      <p class="content-item-paragraph">At LumoLetters, we are committed to protecting the privacy and confidentiality of our users. This Privacy Policy outlines our practices regarding the collection, use, storage, and protection of personal information provided to us.</p>
+      <p class="content-item-paragraph">
+        LumoLetters is committed to protecting your privacy and handling your personal information with transparency and care. This Privacy Policy explains what we collect, how we use it, and the choices available to you when you use our website and services.
+      </p>
+      <p class="content-item-paragraph">
+        <strong>Last Updated:</strong> January 1, 2025
+      </p>
     </div>
 
     <div class="content-item">
-        <h2 class="content-item-heading">1. Information Collection and Use</h2>
+      <h2 class="content-item-heading">1. Information We Collect</h2>
 
-        <h3 class="content-item-heading">1.1 Types of Information Collected:</h3>
-        <p class="content-item-paragraph">We collect the following categories of personal information:</p>
-          <p class="content-item-value"><strong style="font-weight: bold;">Caregiver Information (if applicable):</strong> Contact details, including full name, email address, and phone number.</p>
-          <p class="content-item-value"><strong style="font-weight: bold;">Participant Information:</strong> Full name, and optionally date of birth, as well as preferences and interests to facilitate personalized letter creation. This may also include other information volunteered by the user.</p>
-          <p class="content-item-value"><strong style="font-weight: bold;">Authorization Information:</strong> Confirmation of consent from caregivers authorizing letter creation and delivery to the designated senior participant.</p>
+      <h3 class="content-item-heading">1.1 Personal Information</h3>
+      <p class="content-item-paragraph">We collect information you provide when creating an account, subscribing, or interacting with our service, including:</p>
 
+      <p class="content-item-value"><strong>Your Contact Information:</strong> Name, email address, and mailing address for the delivery of your letters.</p>
+      <p class="content-item-value"><strong>Subscription Details:</strong> Preferences, interests, topics of curiosity, and any information you choose to share during onboarding so your letters can be tailored to you.</p>
+      <p class="content-item-value"><strong>Support Communications:</strong> Any messages you send through our support channels to help us assist you with your account or service questions.</p>
 
-        <h3 class="content-item-heading">1.2 Purpose of Information Collection:</h3>
-        <p class="content-item-paragraph">We use the collected information solely for the following purposes:</p>
-          <p class="content-item-value">To create and deliver personalized letters to senior participants.</p>
-          <p class="content-item-value">To maintain effective communication with caregivers, or other individuals who have signed up, regarding updates, program changes, and other related matters.</p>
-          <p class="content-item-value">To enhance our services through anonymized and aggregated data analysis, used for identifying patterns, improvements, and service enhancements.</p>
+      <h3 class="content-item-heading">1.2 Automatically Collected Information</h3>
+      <p class="content-item-paragraph">We collect limited technical information when you browse or interact with our website, including IP address, browser type, device information, and page visit timestamps. This helps us maintain site performance, security, and improve our service.</p>
+
+      <h3 class="content-item-heading">1.3 Payment Information</h3>
+      <p class="content-item-paragraph">
+        LumoLetters does not store or process your credit card details. All payment information is securely handled by our payment processor, Stripe, which maintains PCI-DSS compliance.
+      </p>
+
+      <h3 class="content-item-heading">1.4 Cookies and Tracking</h3>
+      <p class="content-item-paragraph">
+        We use essential cookies to maintain your session and remember your login status. We may also use analytics cookies to understand how our service is used and to improve user experience. You can control cookie preferences through your browser settings, though disabling certain cookies may affect site functionality.
+      </p>
     </div>
 
     <div class="content-item">
-        <h2 class="content-item-heading">2. Information Sharing and Disclosure</h2>
+      <h2 class="content-item-heading">2. How We Use Your Information</h2>
+      
+      <h3 class="content-item-heading">2.1 Letter Generation and Curation</h3>
+      <p class="content-item-paragraph">
+        LumoLetters uses artificial intelligence technology to generate personalized letter content based on your interests and topics. Here's how it works:
+      </p>
 
-         <h3 class="content-item-heading">2.1 Third-Party Restrictions:</h3>
-        <p class="content-item-paragraph">We unequivocally affirm that we do not share, sell, rent, or lease your personal information to third-party entities.</p>
+      <p class="content-item-value"><strong>AI-Generated Content:</strong> Your interests, topics, and preferences are processed by AI systems (such as Google Gemini, Anthropic Claude, or other leading AI services) to draft letter content tailored to you.</p>
+      <p class="content-item-value"><strong>Human Curation:</strong> All AI-generated letters are reviewed and curated by our team to ensure quality, appropriateness, and alignment with our service standards before being sent to you.</p>
+      <p class="content-item-value"><strong>Privacy Protection:</strong> Your personal information is used solely to generate your letters and is not used to train external AI models or shared for purposes unrelated to your subscription.</p>
+      <p class="content-item-value"><strong>Letter Memory:</strong> We store summaries of your past letters to create continuity and evolving dialogue in future correspondence. This helps each new letter feel like part of an ongoing conversation.</p>
 
-         <h3 class="content-item-heading">2.2 Marketing Limitations:</h3>
-        <p class="content-item-paragraph">We commit to not using your data for marketing activities beyond the scope of our provided services.</p>
+      <h3 class="content-item-heading">2.2 Other Uses</h3>
+      <p class="content-item-paragraph">Beyond letter generation, we use your information to:</p>
 
-        <h3 class="content-item-heading">2.3 Data Storage:</h3>
-        <p class="content-item-paragraph">We do not collect or store any sensitive personal data such as financial or medical details.</p>
+      <p class="content-item-value">Manage your subscription and account settings.</p>
+      <p class="content-item-value">Process and fulfill your monthly letter deliveries.</p>
+      <p class="content-item-value">Communicate with you about your account, subscription updates, or service changes.</p>
+      <p class="content-item-value">Improve our service through internal analytics and troubleshooting.</p>
+      <p class="content-item-value">Respond to your support requests and questions.</p>
+
+      <p class="content-item-paragraph">
+        We do not use your personal information for external marketing purposes or sell your information to third parties.
+      </p>
     </div>
 
     <div class="content-item">
-        <h2 class="content-item-heading">3. Data Security Measures</h2>
+      <h2 class="content-item-heading">3. Information Sharing</h2>
 
-        <h3 class="content-item-heading">3.1 Secure Storage:</h3>
-        <p class="content-item-paragraph">We utilize secure, encrypted online forms for the collection of your information.</p>
+      <h3 class="content-item-heading">3.1 Trusted Service Providers</h3>
+      <p class="content-item-paragraph">
+        We do not sell or rent your personal information. We share data only with trusted partners who help us operate LumoLetters, including:
+      </p>
+      <p class="content-item-value"><strong>Stripe:</strong> To securely process payments.</p>
+      <p class="content-item-value"><strong>Auth0:</strong> To provide secure login and account authentication.</p>
+      <p class="content-item-value"><strong>MongoDB Atlas:</strong> To securely store your account information, preferences, and letter history with enterprise-grade encryption.</p>
+      <p class="content-item-value"><strong>AI Service Providers:</strong> To generate letter content based on your interests. These providers process your data solely to provide this service and do not use your information for their own purposes.</p>
+      <p class="content-item-value"><strong>Mail Carriers:</strong> To deliver your physical letters to the address you provide.</p>
 
-        <h3 class="content-item-heading">3.2 Limited Access:</h3>
-        <p class="content-item-paragraph">Access to the stored information is strictly limited to authorized personnel within the LumoLetters team, all of whom have been trained in data security and privacy practices.</p>
+      <p class="content-item-paragraph">These partners are contractually obligated to use your information only to perform services on our behalf and to maintain appropriate security measures.</p>
 
-        <h3 class="content-item-heading">3.3 Data Retention:</h3>
-        <p class="content-item-paragraph">We will retain personal data only for as long as is necessary for the purposes set out in this Privacy Policy, unless a longer retention period is required or permitted by law.</p>
+      <h3 class="content-item-heading">3.2 Legal Requirements</h3>
+      <p class="content-item-paragraph">We may disclose information if required to comply with a legal obligation, court order, or government request, or to protect the rights, property, and safety of LumoLetters, our users, or the public.</p>
     </div>
 
     <div class="content-item">
-        <h2 class="content-item-heading">4. Your Rights and Choices</h2>
+      <h2 class="content-item-heading">4. Data Security</h2>
+      <p class="content-item-paragraph">
+        We take reasonable administrative, technical, and physical steps to safeguard your information from unauthorized access, alteration, disclosure, or loss, including:
+      </p>
 
-         <h3 class="content-item-heading">4.1 Access and Correction:</h3>
-        <p class="content-item-paragraph">You have the right to request access to, review, and correct any inaccuracies in your personal information held by us.</p>
+      <p class="content-item-value">Secure account authentication managed through Auth0.</p>
+      <p class="content-item-value">Personal data stored in MongoDB Atlas with encryption at rest and in transit.</p>
+      <p class="content-item-value">All payment processing handled through encrypted, PCI-compliant systems via Stripe.</p>
+      <p class="content-item-value">Regular security reviews and updates to our systems and practices.</p>
+      <p class="content-item-value">Limited employee access to personal information on a need-to-know basis.</p>
 
-         <h3 class="content-item-heading">4.2 Withdrawal and Removal:</h3>
-         <p class="content-item-paragraph">You can withdraw your participation from the program at any time. Upon request, we will take reasonable steps to remove and/or anonymize your personal data, subject to applicable legal requirements.</p>
-
-         <h3 class="content-item-heading">4.3 Data Portability:</h3>
-        <p class="content-item-paragraph">You can request a copy of your personal information in a structured, commonly used, and machine-readable format.</p>
+      <p class="content-item-paragraph">
+        While we strive to protect your information, no method of transmission over the internet or electronic storage is completely secure. We cannot guarantee absolute security but are committed to protecting your data using industry-standard practices.
+      </p>
     </div>
 
     <div class="content-item">
-        <h2 class="content-item-heading">5. Contact Information</h2>
-        <p class="content-item-paragraph">For any inquiries, concerns, requests for clarification, or to exercise your rights, please contact our Privacy Officer via email at <a href="mailto:info@LumoLetters.com">info@LumoLetters.com</a></p>
+      <h2 class="content-item-heading">5. Data Retention</h2>
+      
+      <h3 class="content-item-heading">5.1 Account Information</h3>
+      <p class="content-item-paragraph">
+        We retain your account information, preferences, and subscription details for as long as your account is active or as needed to provide our service.
+      </p>
+
+      <h3 class="content-item-heading">5.2 Letter Content and History</h3>
+      <p class="content-item-paragraph">
+        Generated letters and their summaries are stored in our database to create continuity in your correspondence. Past letter summaries help inform future letters, making each one feel like part of an evolving dialogue.
+      </p>
+
+      <h3 class="content-item-heading">5.3 Account Deletion</h3>
+      <p class="content-item-paragraph">
+        If you close your account or request deletion of your data, we will permanently remove your personal information, letter content, and summaries from our active databases within 30 days, except where retention is required by law or for legitimate business purposes (such as resolving disputes or enforcing our terms).
+      </p>
     </div>
 
     <div class="content-item">
-      <h2 class="content-item-heading">6. Policy Updates</h2>
-      <p class="content-item-paragraph">This Privacy Policy is effective as of 01/01/2025. We reserve the right to modify this Privacy Policy from time to time. Any updates will be communicated to participants, and your continued use of our service will be considered as acceptance of such changes.</p>
+      <h2 class="content-item-heading">6. Your Rights and Choices</h2>
+      <p class="content-item-paragraph">
+        Depending on your location, you may have the following rights regarding your personal information:
+      </p>
+
+      <p class="content-item-value"><strong>Access:</strong> Request access to the personal information we hold about you.</p>
+      <p class="content-item-value"><strong>Correction:</strong> Request corrections to inaccurate or incomplete data.</p>
+      <p class="content-item-value"><strong>Deletion:</strong> Request deletion of your personal information and account.</p>
+      <p class="content-item-value"><strong>Portability:</strong> Request a portable copy of your data in a structured, commonly used format.</p>
+      <p class="content-item-value"><strong>Objection:</strong> Object to certain processing of your information.</p>
+      <p class="content-item-value"><strong>Unsubscribe:</strong> Cancel your subscription at any time through your account settings or by contacting us.</p>
+
+      <p class="content-item-paragraph">
+        To exercise these rights or for questions about your data, contact us at <a href="mailto:info@lumoletters.com">info@lumoletters.com</a>. We will respond to your request within 30 days.
+      </p>
     </div>
 
-     <div class="content-item">
-        <h2 class="content-item-heading">7. Acknowledgement of Agreement</h2>
-        <p class="content-item-paragraph">By completing and submitting the intake form or otherwise using our services, you acknowledge that you have carefully read, fully understood, and explicitly agree to be bound by the terms and conditions outlined in this Privacy Policy.</p>
+    <div class="content-item">
+      <h2 class="content-item-heading">7. Age Requirements</h2>
+      <p class="content-item-paragraph">
+        LumoLetters is intended for individuals 18 years of age or older. We do not knowingly collect information from anyone under 18. If you are under 18, please do not use our service or provide any personal information. If we become aware that we have collected information from someone under 18, we will take steps to delete that information promptly.
+      </p>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">8. International Data Transfers</h2>
+      <p class="content-item-paragraph">
+        LumoLetters operates primarily in the United States. If you are located outside the United States, please be aware that information we collect may be transferred to, stored, and processed in the United States or other countries where our service providers operate. By using our service, you consent to the transfer of your information to countries that may have different data protection laws than your country of residence.
+      </p>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">9. Changes to This Policy</h2>
+      <p class="content-item-paragraph">
+        We may update this Privacy Policy from time to time to reflect changes in our practices, technology, legal requirements, or other factors. When we make changes, we will update the "Last Updated" date at the top of this page and, for material changes, may notify you via email or through a notice on our website.
+      </p>
+      <p class="content-item-paragraph">
+        We encourage you to review this Privacy Policy periodically to stay informed about how we protect your information.
+      </p>
+    </div>
+
+    <div class="content-item">
+      <h2 class="content-item-heading">10. Contact Us</h2>
+      <p class="content-item-paragraph">
+        If you have questions, concerns, or requests regarding this Privacy Policy or your personal information, please contact us at:
+      </p>
+      <p class="content-item-value">
+        <strong>Email:</strong> <a href="mailto:info@lumoletters.com">info@lumoletters.com</a>
+      </p>
+      <p class="content-item-paragraph">
+        We take privacy concerns seriously and will respond to your inquiry as promptly as possible.
+      </p>
     </div>
   </div>
 </div>
